--- a/assets_lab/css/krant.css
+++ b/assets_lab/css/krant.css
@@ -1,14 +1,15 @@
 .grid-container{
     display: grid;
-    grid-column-gap: 5%;
-    grid-template-columns: 25% 11% auto;
+    grid-column-gap: 1%;
+    grid-template-columns: 47% 11% auto;
     grid-row-gap: 0%;
-    padding: 0 auto;
-    margin: 0 auto;
+    padding: auto;
+    margin: auto;
 }
 
 .grid-item{
     position: relative;
+    padding-bottom: 0.5%;
 }
 
 .item1{
@@ -19,4 +20,12 @@
 .item2{
     grid-column: 1 / span 3;
     grid-row: 2;
+}
+
+.item3{
+    padding-right: 0%;
+}
+
+.item4{
+    padding: 0;
 }
