--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,29 @@
-.body{
-    text-align: center;
-    border: 2px solid black;
+.grid-container{
+    display: grid;
+    grid-template-columns: 2% 32% 32% 32% 2%;
+}
+
+.item1{
+    grid-column: 1 / span 5;
+    grid-row: 1;
+}
+
+.item2{
+    grid-column: 1 / span 5;
+    grid-row: 2;
+}
+
+.item4{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row: 4;
+}
+
+.item5{
+    grid-column: 3;
+    grid-row: 4;
+}
+
+.item6{
+    
 }
