--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,64 @@
 .grid-container{
     display: grid;
     grid-template-columns: 2% 32% 32% 32% 2%;
+    width: 1100px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    margin-left: 14%;
+    position: absolute;
+    font-family: 'Lato', sans-serif;
+}
+
+.body{
+    margin: 0 auto;
+}
+
+h2{
+    font-size: 20px;
+    line-height: 22px;
 }
 
 .item1{
     grid-column: 1 / span 5;
     grid-row: 1;
+    background-image: url("../img/header_bg.png");
 }
 
 .item2{
-    grid-column: 1 / span 5;
+    grid-column: 2 / span 5;
     grid-row: 2;
+    background-image: url("../img/banner_bg.png");
+    float: left;
 }
 
 .item4{
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row: 4;
+    margin-left: 25px;
 }
 
 .item5{
-    grid-column: 3;
+    grid-column-start: 3;
+    grid-column-end: 4;
     grid-row: 4;
+    margin-left: 25px;
 }
 
 .item6{
-    
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row: 4;
+    margin-left: 25px;
+}
+
+.item7{
+    grid-column-start: 1;
+    grid-column-end: 6;
+    grid-row: 5;
+    background-image: url("../img/footer_bg.png");
+    text-align: center;
+    color: white;
 }
