--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,10 @@
 .grid-container{
     display: grid;
-    grid-template-columns: 2% 32% 32% 32% 2%;
+    grid-template-columns: 4% auto auto auto 3%;
     width: 1100px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    margin-left: 14%;
-    position: absolute;
+    margin: 0 auto;
     font-family: 'Lato', sans-serif;
+    grid-template-rows: 13% 48% auto auto;
 }
 
 .body{
@@ -23,14 +19,36 @@ h2{
 .item1{
     grid-column: 1 / span 5;
     grid-row: 1;
+    padding-top: 11px;
+    padding-left: 11px;
     background-image: url("../img/header_bg.png");
 }
 
 .item2{
-    grid-column: 2 / span 5;
+    grid-column-start: 2;
+    grid-column-end: 4;
     grid-row: 2;
+    padding-top: 20px;
     background-image: url("../img/banner_bg.png");
-    float: left;
+}
+
+#banner-text{
+    color: white;
+    font-size: 13px;
+    line-height: 17px;
+}
+
+#banner-header{
+    color: white;
+}
+
+.item3{
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row: 2;
+    padding-left: 15px;
+    padding-top: 18px;
+    background-image: url("../img/banner_bg.png");
 }
 
 .item4{
@@ -38,6 +56,7 @@ h2{
     grid-column-end: 3;
     grid-row: 4;
     margin-left: 25px;
+    padding-top: 15px;
 }
 
 .item5{
@@ -45,6 +64,7 @@ h2{
     grid-column-end: 4;
     grid-row: 4;
     margin-left: 25px;
+    padding-top: 15px;
 }
 
 .item6{
@@ -52,13 +72,46 @@ h2{
     grid-column-end: 5;
     grid-row: 4;
     margin-left: 25px;
+    padding-top: 15px;
 }
 
-.item7{
+.item8{
     grid-column-start: 1;
     grid-column-end: 6;
     grid-row: 5;
     background-image: url("../img/footer_bg.png");
     text-align: center;
     color: white;
+}
+
+.background1{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row: 2;
+    background-image: url("../img/banner_bg.png");
+}
+
+.background2{
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row: 2;
+    background-image: url("../img/banner_bg.png");
+}
+
+#link1{
+    text-decoration: none;
+    color: rgb(90, 88, 88);
+    font-size: 15px;
+}
+
+#link2{
+    text-decoration: none;
+    color: rgb(90, 88, 88);
+    font-size: 15px;
+}
+
+#link3{
+    text-decoration: none;
+    color: rgb(90, 88, 88);
+    font-size: 15px;
 }
